# rust-remix-starter

./: .gitignore  README.md  docker-compose.yaml
api/: .env.sample  Cargo.toml
api/migrations/: 001_init.sql
api/src/: main.rs
api/src/database/: mod.rs  todos.rs
api/src/middleware/: mod.rs
api/src/router/: auth.rs  mod.rs  todos.rs
api/src/service/: auth.rs  mod.rs  users.rs
web/: components.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: index.css  root.tsx  sessions.server.ts
web/app/components/: mode-toggle.tsx
web/app/lib/: api.ts  get-session.ts
web/app/routes/: _index.tsx  _mtk._index.tsx  _mtk.tsx  action.set-theme.ts  auth.login.tsx  auth.register.tsx  auth.tsx
