[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
axum = "0.7.5"
rspc = "0.2.0"
rspc-axum = { version = "0.1.1", features = ["ws"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls" ] }
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.115"
specta = "1.0.5"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
